Added additional code that will factor in new data that I've included for the rankings (Wind, Place and WA Score).

--- a/notebooks/100M_Career_Analysis.ipynb
+++ b/notebooks/100M_Career_Analysis.ipynb
@@ -1055,6 +1055,114 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average Wind For Each Athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Wind_100m = All_100m_Races.groupby('Athlete')['Wind'].mean().reset_index(name='Avg_Wind_100m')\n",
+    "Average_Wind_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Wind_100m = pd.DataFrame(Average_Wind_100m)\n",
+    "Average_Wind_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average Place (Finish) For Each Athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_100m = All_100m_Races.groupby('Athlete')['Place'].mean().reset_index(name='Avg_Place_100m')\n",
+    "Average_Place_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_100m = pd.DataFrame(Average_Place_100m)\n",
+    "Average_Place_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Total World Athletics Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_WA_Score_100m = All_100m_Races.groupby('Athlete')['Score'].sum().reset_index(name='Total_WA_Score_100m')\n",
+    "Total_WA_Score_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_WA_Score_100m = pd.DataFrame(Total_WA_Score_100m)\n",
+    "Total_WA_Score_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average World Athletics Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_WA_Score_100m = All_100m_Races.groupby('Athlete')['Score'].mean().reset_index(name='Avg_WA_Score_100m')\n",
+    "Avg_WA_Score_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_WA_Score_100m = pd.DataFrame(Avg_WA_Score_100m)\n",
+    "Avg_WA_Score_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "FZ6Gl96oQ-N7"
    },
@@ -1150,6 +1258,74 @@
    "source": [
     "seasons_and_races_100m['Avg_Races_Year_100m'] = round(seasons_and_races_100m['total_races_100m'] / seasons_and_races_100m['Years'],2)\n",
     "seasons_and_races_100m.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add the average wind for each athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_100m = pd.merge(seasons_and_races_100m, Average_Wind_100m, on=['Athlete'],how='left')\n",
+    "seasons_and_races_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add average place (finish) for each athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_100m = pd.merge(seasons_and_races_100m, Average_Place_100m, on=['Athlete'],how='left')\n",
+    "seasons_and_races_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add the total World Athletics Score for Each Athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_100m = pd.merge(seasons_and_races_100m, Total_WA_Score_100m, on=['Athlete'],how='left')\n",
+    "seasons_and_races_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add the average World Athletics Score for Each Athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_100m = pd.merge(seasons_and_races_100m, Avg_WA_Score_100m, on=['Athlete'],how='left')\n",
+    "seasons_and_races_100m.head(3)"
    ]
   },
   {
@@ -1556,6 +1732,61 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Which countries did most of the top athletes race?**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country = pd.DataFrame(All_100m_Races['Loccation_Country'].value_counts().reset_index())\n",
+    "race_location_country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country.columns = ['Country','Races']\n",
+    "race_location_country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country.Country.nlargest(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country.Country.nsmallest(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country = pd.DataFrame(race_location_country)\n",
+    "race_location_country.head(3)"
    ]
   },
   {
@@ -2423,6 +2654,13 @@
     "df_100m['z_career_avg_season'] = zscore(df_100m['Career_Avg_100m'],nan_policy='omit')\n",
     "df_100m['z_total_races'] = -zscore(df_100m['total_races_100m'],nan_policy='omit')\n",
     "df_100m['z_races_per_year'] = -zscore(df_100m['Avg_Races_Year_100m'],nan_policy='omit')\n",
+    "#Need to determine if the following below need a positive or negative z-socre\n",
+    "#df_100m['z_avg_wind_per_year'] = -zscore(df_100m['Average_Wind_100m'],nan_policy='omit')\n",
+    "#df_100m['z_avg_place_per_race'] = -zscore(df_100m['Average_Place_100m'],nan_policy='omit')\n",
+    "#df_100m['z_total_WA_score'] = -zscore(df_100m['Total_WA_Score_100m'],nan_policy='omit')\n",
+    "#df_100m['z_avg_WA_score'] = -zscore(df_100m['Avg_WA_Score_100m'],nan_policy='omit')\n",
+    "\n",
+    "\n",
     "\n",
     "# Z-score comparison (combine time and years)\n",
     "df_100m['z_combined'] = (df_100m['z_time'] + df_100m['z_years'] + df_100m['z_PR'] + df_100m['z_career_avg_season'] + df_100m['z_total_races'] + df_100m['z_races_per_year'])  / 6"
@@ -2541,9 +2779,15 @@
     "df_100m['rank_years_competed'] = df_100m['Years_Competed_100m'].rank(ascending=False)  # Longer careers are better\n",
     "df_100m['rank_total_races'] = df_100m['total_races_100m'].rank(ascending=False)  # More races is better\n",
     "df_100m['rank_races_per_year'] = df_100m['Avg_Races_Year_100m'].rank(ascending=False)  # More races per year is better\n",
+    "#df_100m['rank_avg_wind_per_year'] = df_100m['Average_Wind_100m'].rank(ascending=False)  # More wind is better\n",
+    "df_100m['rank_avg_place_per_race'] = df_100m['Average_Place_100m'].rank(ascending=True)  # Lower finish each race is better\n",
+    "#df_100m['rank_total_WA_score'] = df_100m['Total_WA_Score_100m'].rank(ascending=True)  # Higher Score is better\n",
+    "df_100m['rank_avg_WA_score'] = df_100m['Avg_WA_Score_100m'].rank(ascending=True)  # Higher Score is better\n",
+    "\n",
+    "\n",
     "\n",
     "#Final ranking\n",
-    "df_100m['final_rank'] = df_100m[['rank_personal_best','rank_average_sb', 'rank_career_avg', 'rank_consistency', 'rank_years_competed','rank_total_races','rank_races_per_year']].mean(axis=1)"
+    "df_100m['final_rank'] = df_100m[['rank_personal_best','rank_average_sb', 'rank_career_avg', 'rank_consistency', 'rank_years_competed','rank_total_races','rank_races_per_year','rank_avg_place_per_race','rank_avg_WA_score']].mean(axis=1)"
    ]
   },
   {
