Added code to analyze clutch gene and fix wind column if needed.

--- a/notebooks/100M_Career_Analysis.ipynb
+++ b/notebooks/100M_Career_Analysis.ipynb
@@ -808,6 +808,77 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Chance any non-numeric values to either blank or 0 in the Wind column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To changes the non-numeric values values to blank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#All_100m_Races['Wind'] = All_100m_Races['Wind'].replace('NWI',np.nan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To chabge the non-numeric valuesvalues to 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#All_100m_Races['Wind'] = All_100m_Races['Wind'].replace('NWI',0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If I need to change the blank / null values in the wind column to 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#All_100m_Races['Wind'] = All_100m_Races['Wind'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's make sure that the wind column is now a numeric datatype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "All_100m_Races['Wind'] = pd.to_numeric(All_100m_Races['Wind'], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "pMChsNe65R8X"
    },
@@ -1094,6 +1165,123 @@
    "outputs": [],
    "source": [
     "Average_Place_100m = All_100m_Races.groupby('Athlete')['Place'].mean().reset_index(name='Avg_Place_100m')\n",
+    "Average_Place_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Find the Average Place when the Race is a Final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Final_Heat_100m = All_100m_Races[All_100m_Races['Race'] =='F']\n",
+    "Final_Heat_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_100mF = Final_Heat_100m.groupby('Athlete')['Place'].mean().reset_index(name='Avg_Place_100m_Final_Heat')\n",
+    "Average_Place_100mF.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_100mF = pd.DataFrame(Average_Place_100mF)\n",
+    "Average_Place_100mF.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Merge this with the Average 100m Place Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_100m = pd.merge(Average_Place_100m, Average_Place_100mF, on=['Athlete'],how='left')\n",
+    "Average_Place_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Find the Average Place when the Race is a Final in a Championship or High Level Meet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "High_Level_Meet = ['OW','DF', 'DL', 'GW', 'GL']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "High_Level_Meet_Final = All_100m_Races[(All_100m_Races['Race'] =='F') & (All_100m_Races['Category'].isin(High_Level_Meet))]\n",
+    "High_Level_Meet_Final.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "High_Level_Meet_Final = pd.DataFrame(High_Level_Meet_Final)\n",
+    "High_Level_Meet_Final.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_Clutch_Finish_100mF = High_Level_Meet_Final.groupby('Athlete')['Place'].mean().reset_index(name='Avg_Clutch_Finish_100mF')\n",
+    "Avg_Clutch_Finish_100mF.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Merge this with the Average 100m Place Dataframe as well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_100m = pd.merge(Average_Place_100m, Avg_Clutch_Finish_100mF, on=['Athlete'],how='left')\n",
     "Average_Place_100m.head(3)"
    ]
   },
@@ -2657,6 +2845,8 @@
     "#Need to determine if the following below need a positive or negative z-socre\n",
     "#df_100m['z_avg_wind_per_year'] = -zscore(df_100m['Average_Wind_100m'],nan_policy='omit')\n",
     "#df_100m['z_avg_place_per_race'] = -zscore(df_100m['Average_Place_100m'],nan_policy='omit')\n",
+    "#df_100m['z_avg_place_per_final'] = -zscore(df_100m['Avg_Place_100m_Final_Heat'],nan_policy='omit')\n",
+    "#df_100m['z_avg_clutch_finish'] = -zscore(df_100m['Avg_Clutch_Finish_100mF'],nan_policy='omit')\n",
     "#df_100m['z_total_WA_score'] = -zscore(df_100m['Total_WA_Score_100m'],nan_policy='omit')\n",
     "#df_100m['z_avg_WA_score'] = -zscore(df_100m['Avg_WA_Score_100m'],nan_policy='omit')\n",
     "\n",
@@ -2781,6 +2971,8 @@
     "df_100m['rank_races_per_year'] = df_100m['Avg_Races_Year_100m'].rank(ascending=False)  # More races per year is better\n",
     "#df_100m['rank_avg_wind_per_year'] = df_100m['Average_Wind_100m'].rank(ascending=False)  # More wind is better\n",
     "df_100m['rank_avg_place_per_race'] = df_100m['Average_Place_100m'].rank(ascending=True)  # Lower finish each race is better\n",
+    "#df_100m['rank_avg_place_per_final'] = df_100m['Avg_Place_100m_Final_Heat'].rank(ascending=True)  # Lower finish each race is better\n",
+    "#df_100m['rank_avg_clutch_finish'] = df_100m['Avg_Clutch_Finish_100mF'].rank(ascending=True)  # Lower finish each race is better\n",
     "#df_100m['rank_total_WA_score'] = df_100m['Total_WA_Score_100m'].rank(ascending=True)  # Higher Score is better\n",
     "df_100m['rank_avg_WA_score'] = df_100m['Avg_WA_Score_100m'].rank(ascending=True)  # Higher Score is better\n",
     "\n",
