Fixing typo for 100m analysis and updating code for 200m & 400m to reflect new data being collected.

--- a/notebooks/100M_Career_Analysis.ipynb
+++ b/notebooks/100M_Career_Analysis.ipynb
@@ -810,7 +810,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's Chance any non-numeric values to either blank or 0 in the Wind column"
+    "Let's Change any non-numeric values to either blank or 0 in the Wind column"
    ]
   },
   {
