--- a/notebooks/400M_Career_Analysis.ipynb
+++ b/notebooks/400M_Career_Analysis.ipynb
@@ -823,6 +823,77 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Change any non-numeric values to either blank or 0 in the Wind column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To changes the non-numeric values values to blank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#All_400m_Races['Wind'] = All_400m_Races['Wind'].replace('NWI',np.nan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To chabge the non-numeric valuesvalues to 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#All_400m_Races['Wind'] = All_400m_Races['Wind'].replace('NWI',0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If I need to change the blank / null values in the wind column to 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#All_400m_Races['Wind'] = All_400m_Races['Wind'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's make sure that the wind column is now a numeric datatype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "All_400m_Races['Wind'] = pd.to_numeric(All_00m_Races['Wind'], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "pMChsNe65R8X"
    },
@@ -1094,6 +1165,238 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average Wind For Each Athlete"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: We may not need the wind factor for the 400m analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Wind_400m = All_100m_Races.groupby('Athlete')['Wind'].mean().reset_index(name='Avg_Wind_400m')\n",
+    "Average_Wind_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Wind_400m = pd.DataFrame(Average_Wind_400m)\n",
+    "Average_Wind_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average Place (Finish) For Each Athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_400m = All_400m_Races.groupby('Athlete')['Place'].mean().reset_index(name='Avg_Place_400m')\n",
+    "Average_Place_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Find the Average Place when the Race is a Final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Final_Heat_400m = All_400m_Races[All_400m_Races['Race'] =='F']\n",
+    "Final_Heat_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_400mF = Final_Heat_400m.groupby('Athlete')['Place'].mean().reset_index(name='Avg_Place_400m_Final_Heat')\n",
+    "Average_Place_400mF.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_400mF = pd.DataFrame(Average_Place_400mF)\n",
+    "Average_Place_400mF.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Merge this with the Average 400m Place Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_400m = pd.merge(Average_Place_400m, Average_Place_400mF, on=['Athlete'],how='left')\n",
+    "Average_Place_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Find the Average Place when the Race is a Final in a Championship or High Level Meet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "High_Level_Meet = ['OW','DF', 'DL', 'GW', 'GL']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "High_Level_Meet_Final = All_400m_Races[(All_400m_Races['Race'] =='F') & (All_400m_Races['Category'].isin(High_Level_Meet))]\n",
+    "High_Level_Meet_Final.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "High_Level_Meet_Final = pd.DataFrame(High_Level_Meet_Final)\n",
+    "High_Level_Meet_Final.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_Clutch_Finish_400mF = High_Level_Meet_Final.groupby('Athlete')['Place'].mean().reset_index(name='Avg_Clutch_Finish_400mF')\n",
+    "Avg_Clutch_Finish_400mF.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Merge this with the Average 400m Place Dataframe as well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_400m = pd.merge(Average_Place_400m, Avg_Clutch_Finish_400mF, on=['Athlete'],how='left')\n",
+    "Average_Place_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_400m = pd.DataFrame(Average_Place_400m)\n",
+    "Average_Place_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Total World Athletics Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_WA_Score_400m = All_400m_Races.groupby('Athlete')['Score'].sum().reset_index(name='Total_WA_Score_400m')\n",
+    "Total_WA_Score_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_WA_Score_100m = pd.DataFrame(Total_WA_Score_100m)\n",
+    "Total_WA_Score_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average World Athletics Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_WA_Score_400m = All_400m_Races.groupby('Athlete')['Score'].mean().reset_index(name='Avg_WA_Score_400m')\n",
+    "Avg_WA_Score_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_WA_Score_400m = pd.DataFrame(Avg_WA_Score_400m)\n",
+    "Avg_WA_Score_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "FZ6Gl96oQ-N7"
    },
@@ -1189,6 +1492,84 @@
    "source": [
     "seasons_and_races_400m['Avg_Races_Year_400m'] = round(seasons_and_races_400m['total_races_400m'] / seasons_and_races_400m['Years'],2)\n",
     "sprinters.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add the average wind for each athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_400m = pd.merge(seasons_and_races_400m, Average_Wind_400m, on=['Athlete'],how='left')\n",
+    "seasons_and_races_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add average place (finish) for each athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_400m = pd.merge(seasons_and_races_400m, Average_Place_400m, on=['Athlete'],how='left')\n",
+    "seasons_and_races_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add the total World Athletics Score for Each Athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_400m = pd.merge(seasons_and_races_400m, Total_WA_Score_400m, on=['Athlete'],how='left')\n",
+    "seasons_and_races_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add the average World Athletics Score for Each Athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_400m = pd.merge(seasons_and_races_400m, Avg_WA_Score_400m, on=['Athlete'],how='left')\n",
+    "seasons_and_races_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_400m = pd.DataFrame(seasons_and_races_400m)\n",
+    "seasons_and_races_400m.head(3)"
    ]
   },
   {
@@ -1553,6 +1934,61 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Which countries did most of the top athletes race?**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country = pd.DataFrame(All_400m_Races['Loccation_Country'].value_counts().reset_index())\n",
+    "race_location_country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country.columns = ['Country','Races']\n",
+    "race_location_country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country.Country.nlargest(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country.Country.nsmallest(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country = pd.DataFrame(race_location_country)\n",
+    "race_location_country.head(3)"
    ]
   },
   {
@@ -2264,6 +2700,13 @@
     "df_400m['z_career_avg_season'] = zscore(df_400m['Career_Avg_400m'],nan_policy='omit')\n",
     "df_400m['z_total_races'] = -zscore(df_400m['total_races_400m'],nan_policy='omit')\n",
     "df_400m['z_races_per_year'] = -zscore(df_400m['Avg_Races_Year_400m'],nan_policy='omit')\n",
+    "#Need to determine if the following below need a positive or negative z-socre\n",
+    "#df_400m['z_avg_wind_per_year'] = -zscore(df_400m['Average_Wind_400m'],nan_policy='omit')\n",
+    "#df_400m['z_avg_place_per_race'] = -zscore(df_400m['Average_Place_400m'],nan_policy='omit')\n",
+    "#df_400m['z_avg_place_per_final'] = -zscore(df_400m['Avg_Place_400m_Final_Heat'],nan_policy='omit')\n",
+    "#df_400m['z_avg_clutch_finish'] = -zscore(df_400m['Avg_Clutch_Finish_400mF'],nan_policy='omit')\n",
+    "#df_400m['z_total_WA_score'] = -zscore(df_400m['Total_WA_Score_400m'],nan_policy='omit')\n",
+    "#df_400m['z_avg_WA_score'] = -zscore(df_400m['Avg_WA_Score_400m'],nan_policy='omit')\n",
     "\n",
     "# Z-score comparison (combine time and years)\n",
     "df_400m['z_combined'] = (df_400m['z_time'] + df_400m['z_years'] + df_400m['z_PR']+ df_400m['z_career_avg_season'] + df_400m['z_total_races'] + df_400m['z_races_per_year']) / 6"
@@ -2382,9 +2825,16 @@
     "df_400m['rank_years_competed'] = df_400m['Years_Competed_400m'].rank(ascending=False)  # Longer careers are better\n",
     "df_400m['rank_total_races'] = df_400m['total_races_400m'].rank(ascending=False)  # More races is better\n",
     "df_400m['rank_races_per_year'] = df_400m['Avg_Races_Year_400m'].rank(ascending=False)  # More races per year is better\n",
+    "#df_400m['rank_avg_wind_per_year'] = df_400m['Average_Wind_400m'].rank(ascending=False)  # More wind is better\n",
+    "df_400m['rank_avg_place_per_race'] = df_400m['Average_Place_400m'].rank(ascending=True)  # Lower finish each race is better\n",
+    "#df_400m['rank_avg_place_per_final'] = df_400m['Avg_Place_400m_Final_Heat'].rank(ascending=True)  # Lower finish each race is better\n",
+    "#df_400m['rank_avg_clutch_finish'] = df_400m['Avg_Clutch_Finish_400mF'].rank(ascending=True)  # Lower finish each race is better\n",
+    "#df_400m['rank_total_WA_score'] = df_400m['Total_WA_Score_400m'].rank(ascending=True)  # Higher Score is better\n",
+    "df_400m['rank_avg_WA_score'] = df_400m['Avg_WA_Score_400m'].rank(ascending=True)  # Higher Score is better\n",
+    "\n",
     "\n",
     "#Final ranking\n",
-    "df_400m['final_rank'] = df_400m[['rank_personal_best','rank_average_sb', 'rank_career_avg', 'rank_consistency', 'rank_years_competed', 'rank_total_races','rank_races_per_year']].mean(axis=1)"
+    "df_400m['final_rank'] = df_400m[['rank_personal_best','rank_average_sb', 'rank_career_avg', 'rank_consistency', 'rank_years_competed', 'rank_total_races','rank_races_per_year','rank_avg_place_per_race','rank_avg_WA_score']].mean(axis=1)"
    ]
   },
   {
