--- a/notebooks/200M_Career_Analysis.ipynb
+++ b/notebooks/200M_Career_Analysis.ipynb
@@ -799,28 +799,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 143
-    },
-    "executionInfo": {
-     "elapsed": 182,
-     "status": "ok",
-     "timestamp": 1729645853404,
-     "user": {
-      "displayName": "Johnny Test",
-      "userId": "16509896550579327523"
-     },
-     "user_tz": 240
-    },
-    "id": "UbrRDVk-qzSi",
-    "outputId": "888c9cc2-1d87-427d-c95f-594c5b28f521"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "All_200m_Races = All_200m_Races[All_200m_Races['Legal'] != 'NO']\n",
     "All_200m_Races.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Change any non-numeric values to either blank or 0 in the Wind column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To changes the non-numeric values values to blank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#All_200m_Races['Wind'] = All_200m_Races['Wind'].replace('NWI',np.nan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To chabge the non-numeric valuesvalues to 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#All_200m_Races['Wind'] = All_200m_Races['Wind'].replace('NWI',0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If I need to change the blank / null values in the wind column to 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#All_200m_Races['Wind'] = All_200m_Races['Wind'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's make sure that the wind column is now a numeric datatype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "All_200m_Races['Wind'] = pd.to_numeric(All_200m_Races['Wind'], errors='coerce')"
    ]
   },
   {
@@ -1096,6 +1150,231 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average Wind For Each Athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Wind_200m = All_200m_Races.groupby('Athlete')['Wind'].mean().reset_index(name='Avg_Wind_200m')\n",
+    "Average_Wind_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Wind_200m = pd.DataFrame(Average_Wind_200m)\n",
+    "Average_Wind_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average Place (Finish) For Each Athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_200m = All_200m_Races.groupby('Athlete')['Place'].mean().reset_index(name='Avg_Place_200m')\n",
+    "Average_Place_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Find the Average Place when the Race is a Final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Final_Heat_200m = All_100m_Races[All_200m_Races['Race'] =='F']\n",
+    "Final_Heat_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_200mF = Final_Heat_200m.groupby('Athlete')['Place'].mean().reset_index(name='Avg_Place_200m_Final_Heat')\n",
+    "Average_Place_200mF.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_200mF = pd.DataFrame(Average_Place_200mF)\n",
+    "Average_Place_200mF.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Merge this with the Average 200m Place Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_200m = pd.merge(Average_Place_200m, Average_Place_200mF, on=['Athlete'],how='left')\n",
+    "Average_Place_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Find the Average Place when the Race is a Final in a Championship or High Level Meet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "High_Level_Meet = ['OW','DF', 'DL', 'GW', 'GL']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "High_Level_Meet_Final = All_200m_Races[(All_200m_Races['Race'] =='F') & (All_200m_Races['Category'].isin(High_Level_Meet))]\n",
+    "High_Level_Meet_Final.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "High_Level_Meet_Final = pd.DataFrame(High_Level_Meet_Final)\n",
+    "High_Level_Meet_Final.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_Clutch_Finish_200mF = High_Level_Meet_Final.groupby('Athlete')['Place'].mean().reset_index(name='Avg_Clutch_Finish_200mF')\n",
+    "Avg_Clutch_Finish_200mF.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Merge this with the Average 200m Place Dataframe as well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_200m = pd.merge(Average_Place_200m, Avg_Clutch_Finish_200mF, on=['Athlete'],how='left')\n",
+    "Average_Place_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_Place_200m = pd.DataFrame(Average_Place_200m)\n",
+    "Average_Place_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Total World Athletics Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_WA_Score_200m = All_200m_Races.groupby('Athlete')['Score'].sum().reset_index(name='Total_WA_Score_200m')\n",
+    "Total_WA_Score_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_WA_Score_200m = pd.DataFrame(Total_WA_Score_200m)\n",
+    "Total_WA_Score_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average World Athletics Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_WA_Score_200m = All_200m_Races.groupby('Athlete')['Score'].mean().reset_index(name='Avg_WA_Score_200m')\n",
+    "Avg_WA_Score_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_WA_Score_200m = pd.DataFrame(Avg_WA_Score_200m)\n",
+    "Avg_WA_Score_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "FZ6Gl96oQ-N7"
    },
@@ -1169,16 +1448,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seasons_and_races_200m = pd.DataFrame(seasons_and_races_200m)\n",
-    "seasons_and_races_200m.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1201,6 +1470,84 @@
    "source": [
     "seasons_and_races_200m['Avg_Races_Year_200m'] = round(seasons_and_races_200m['total_races_200m'] / seasons_and_races_200m['Years'],2)\n",
     "sprinters.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add the average wind for each athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_200m = pd.merge(seasons_and_races_200m, Average_Wind_200m, on=['Athlete'],how='left')\n",
+    "seasons_and_races_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add average place (finish) for each athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_200m = pd.merge(seasons_and_races_200m, Average_Place_200m, on=['Athlete'],how='left')\n",
+    "seasons_and_races_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add the total World Athletics Score for Each Athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_200m = pd.merge(seasons_and_races_200m, Total_WA_Score_200m, on=['Athlete'],how='left')\n",
+    "seasons_and_races_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add the average World Athletics Score for Each Athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_200m = pd.merge(seasons_and_races_200m, Avg_WA_Score_200m, on=['Athlete'],how='left')\n",
+    "seasons_and_races_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_200m = pd.DataFrame(seasons_and_races_200m)\n",
+    "seasons_and_races_200m.head(3)"
    ]
   },
   {
@@ -1707,6 +2054,61 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Which countries did most of the top athletes race?**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country = pd.DataFrame(All_200m_Races['Loccation_Country'].value_counts().reset_index())\n",
+    "race_location_country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country.columns = ['Country','Races']\n",
+    "race_location_country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country.Country.nlargest(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country.Country.nsmallest(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_country = pd.DataFrame(race_location_country)\n",
+    "race_location_country.head(3)"
    ]
   },
   {
@@ -2452,6 +2854,13 @@
     "df_200m['z_career_avg_season'] = zscore(df_200m['Career_Avg_200m'],nan_policy='omit')\n",
     "df_200m['z_total_races'] = -zscore(df_200m['total_races_200m'],nan_policy='omit')\n",
     "df_200m['z_races_per_year'] = -zscore(df_200m['Avg_Races_Year_200m'],nan_policy='omit')\n",
+    "#Need to determine if the following below need a positive or negative z-socre\n",
+    "#df_200m['z_avg_wind_per_year'] = -zscore(df_200m['Average_Wind_200m'],nan_policy='omit')\n",
+    "#df_200m['z_avg_place_per_race'] = -zscore(df_200m['Average_Place_200m'],nan_policy='omit')\n",
+    "#df_200m['z_avg_place_per_final'] = -zscore(df_200m['Avg_Place_200m_Final_Heat'],nan_policy='omit')\n",
+    "#df_200m['z_avg_clutch_finish'] = -zscore(df_200m['Avg_Clutch_Finish_200mF'],nan_policy='omit')\n",
+    "#df_200m['z_total_WA_score'] = -zscore(df_200m['Total_WA_Score_200m'],nan_policy='omit')\n",
+    "#df_200m['z_avg_WA_score'] = -zscore(df_200m['Avg_WA_Score_200m'],nan_policy='omit')\n",
     "\n",
     "# Z-score comparison (combine time and years)\n",
     "df_200m['z_combined'] = (df_200m['z_time'] + df_200m['z_years'] + df_200m['z_PR']+ df_200m['z_career_avg_season'] + df_200m['z_total_races'] + df_200m['z_races_per_year']) / 6"
@@ -2585,9 +2994,16 @@
     "df_200m['rank_years_competed'] = df_200m['Years_Competed_200m'].rank(ascending=False)  # Longer careers are better\n",
     "df_200m['rank_total_races'] = df_200m['total_races_200m'].rank(ascending=False)  # More races is better\n",
     "df_200m['rank_races_per_year'] = df_200m['Avg_Races_Year_200m'].rank(ascending=False)  # More races per year is better\n",
+    "#df_200m['rank_avg_wind_per_year'] = df_200m['Average_Wind_200m'].rank(ascending=False)  # More wind is better\n",
+    "df_200m['rank_avg_place_per_race'] = df_200m['Average_Place_200m'].rank(ascending=True)  # Lower finish each race is better\n",
+    "#df_200m['rank_avg_place_per_final'] = df_200m['Avg_Place_200m_Final_Heat'].rank(ascending=True)  # Lower finish each race is better\n",
+    "#df_200m['rank_avg_clutch_finish'] = df_200m['Avg_Clutch_Finish_200mF'].rank(ascending=True)  # Lower finish each race is better\n",
+    "#df_200m['rank_total_WA_score'] = df_200m['Total_WA_Score_200m'].rank(ascending=True)  # Higher Score is better\n",
+    "df_200m['rank_avg_WA_score'] = df_200m['Avg_WA_Score_200m'].rank(ascending=True)  # Higher Score is better\n",
+    "\n",
     "\n",
     "#Final ranking\n",
-    "df_200m['final_rank'] = df_200m[['rank_personal_best','rank_average_sb', 'rank_career_avg',  'rank_consistency', 'rank_years_competed','rank_total_races','rank_races_per_year']].mean(axis=1)"
+    "df_200m['final_rank'] = df_200m[['rank_personal_best','rank_average_sb', 'rank_career_avg',  'rank_consistency', 'rank_years_competed','rank_total_races','rank_races_per_year','rank_avg_place_per_race','rank_avg_WA_score']].mean(axis=1)"
    ]
   },
   {
