Uploading additional analysis. I need to finish the code for the average time per month for each athlete analysis.

--- a/notebooks/400M_Career_Analysis.ipynb
+++ b/notebooks/400M_Career_Analysis.ipynb
@@ -1993,6 +1993,289 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's find the average time of each athlete by race type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_400m_By_Race_Type = All_400m_Races.groupby(['Athlete', 'Race'])['Time'].mean().reset_index()\n",
+    "\n",
+    "Average_400m_By_Race_Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_400m_By_Race_Type = pd.DataFrame(Average_400m_By_Race_Type)\n",
+    "Average_400m_By_Race_Type.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_400m_By_Race_Category = All_400m_Races.groupby(['Athlete', 'Category'])['Time'].mean().reset_index()\n",
+    "\n",
+    "Average_400m_By_Race_Category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_400m_By_Race_Category = pd.DataFrame(Average_400m_By_Race_Category)\n",
+    "Average_400m_By_Race_Category.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's find the average time of each athlete where the race is a final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter for 100m events and Race types that start with 'F'\n",
+    "Final_Heat_400m = All_400m_Races['Race'].astype(str).str.startswith('F')\n",
+    "\n",
+    "Average_400m_Final_Races = Final_Heat_400m.groupby(['Athlete', 'Race'])['Time'].mean().reset_index()\n",
+    "\n",
+    "# Display the result\n",
+    "print(Average_400m_Final_Races)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_400m_Final_Races = pd.DataFrame(Average_400m_Final_Races)\n",
+    "Average_400m_Final_Races.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see the average time wind and place for each type of race"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_400m_Stats = All_400m_Races.groupby(['Athlete', 'Race'])[['Time', 'Wind', 'Place']].mean().reset_index()\n",
+    "\n",
+    "Avg_400m_Stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_400m_Stats = pd.DataFrame(Avg_400m_Stats)\n",
+    "Avg_400m_Stats.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see the average time wind and place for each category of race"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_400m_Stats_2 = All_400m_Races.groupby(['Athlete', 'Category'])[['Time', 'Wind', 'Place']].mean().reset_index()\n",
+    "\n",
+    "Avg_400m_Stats_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_400m_Stats_2 = pd.DataFrame(Avg_400m_Stats_2)\n",
+    "Avg_400m_Stats_2.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see the average time wind and place for each category and type of race"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_400m_Stats_3 = All_400m_Races.groupby(['Athlete', 'Race','Category'])[['Time', 'Wind', 'Place']].mean().reset_index()\n",
+    "\n",
+    "Avg_400m_Stats_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_400m_Stats_3 = pd.DataFrame(Avg_400m_Stats_3)\n",
+    "Avg_400m_Stats_3.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see the average time for each athlete by month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_time_by_month = All_400m_Races.groupby(['Athlete', 'Month'])['Time'].mean().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " = pd.DataFrame()\n",
+    ".head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's find the average time per athlete by location (country)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_400m_By_Location = All_400m_Races.groupby(['Athlete', 'Loccation_Country'])['Time'].mean().reset_index()\n",
+    "\n",
+    "Avg_400m_By_Location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_400m_By_Location = pd.DataFrame(Avg_400m_By_Location)\n",
+    "Avg_400m_By_Location.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's find the average 400m time for each athlete when they won the race."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter for 100m events where Place is 1\n",
+    "First_Place_400m = All_400m_Races['Place'] == 1\n",
+    "\n",
+    "# Group by Athlete and calculate the average Time\n",
+    "Avg_First_Place_400m = First_Place_400m.groupby('Athlete')['Time'].mean().reset_index()\n",
+    "\n",
+    "Avg_First_Place_400m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Avg_First_Place_400m = pd.DataFrame(Avg_First_Place_400m)\n",
+    "Avg_First_Place_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's get the year by year avg 400m difference for each athlete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_time_per_year_400m = All_400m_Races.groupby(['Athlete', 'Year'])['Time'].mean().reset_index()\n",
+    "\n",
+    "# Sort by Athlete and Year to prepare for difference calculation\n",
+    "avg_time_per_year_400m.sort_values(by=['Athlete', 'Year'], inplace=True)\n",
+    "\n",
+    "# Calculate year-over-year difference in average time\n",
+    "avg_time_per_year_400m['YoY_Diff'] = avg_time_per_year_400m.groupby('Athlete')['Time'].diff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_time_per_year_400m = pd.DataFrame(avg_time_per_year_400m)\n",
+    "avg_time_per_year_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "kVNjz31foPUq"
    },
